# sof-poc1-n8n-fiches

./: .gitignore  Dockerfile  INSTALL_N8N_AWS.md  POC_V4.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.html
app/: main.py  utils.py
src/sof_poc1_n8n_fiches/: __init__.py
